--- a/PortraitCameraPro_Full/app/src/main/res/values/styles.xml
+++ b/PortraitCameraPro_Full/app/src/main/res/values/styles.xml
@@ -1,4 +1,5 @@
 <resources>
-    <style name="Theme.PortraitCamera" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.PortraitCamera" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimary">#6200EE</item>
     </style>
 </resources>
